// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Radio/> should render Radio 1`] = `
<div>
  <label
    class="cuke-radio-wrapper"
  >
    <span
      class="cuke-radio"
    >
      <input
        class="cuke-radio-input"
        type="radio"
      />
      <span
        class="cuke-radio-inner"
      />
    </span>
    <span>
      黄瓜 ui
    </span>
  </label>
  <label
    class="cuke-radio-wrapper cuke-radio-disabled"
  >
    <span
      class="cuke-radio"
    >
      <input
        class="cuke-radio-input"
        disabled=""
        type="radio"
      />
      <span
        class="cuke-radio-inner"
      />
    </span>
    <span>
      黄瓜 ui
    </span>
  </label>
  <label
    checked=""
    class="cuke-radio-wrapper cuke-radio-checked cuke-radio-disabled"
  >
    <span
      class="cuke-radio"
    >
      <input
        checked=""
        class="cuke-radio-input"
        disabled=""
        type="radio"
      />
      <span
        class="cuke-radio-inner"
      />
    </span>
    <span />
  </label>
</div>
`;

exports[`<Radio/> should render Radio.Button 1`] = `
<div
  class="cuke-radio-group"
>
  <label
    checked=""
    class="cuke-radio-wrapper cuke-radio-button-wrapper cuke-radio-checked cuke-radio-default"
  >
    <span
      class="cuke-radio cuke-radio-button"
    >
      <input
        checked=""
        class="cuke-radio-input"
        type="radio"
      />
      <span
        class="cuke-radio-inner"
      />
    </span>
    <span>
      黄瓜 ui
    </span>
  </label>
  <label
    checked=""
    class="cuke-radio-wrapper cuke-radio-button-wrapper cuke-radio-checked cuke-radio-disabled cuke-radio-default"
  >
    <span
      class="cuke-radio cuke-radio-button"
    >
      <input
        checked=""
        class="cuke-radio-input"
        disabled=""
        type="radio"
      />
      <span
        class="cuke-radio-inner"
      />
    </span>
    <span>
      黄瓜 ui
    </span>
  </label>
  <label
    checked=""
    class="cuke-radio-wrapper cuke-radio-button-wrapper cuke-radio-checked cuke-radio-disabled cuke-radio-default"
  >
    <span
      class="cuke-radio cuke-radio-button"
    >
      <input
        checked=""
        class="cuke-radio-input"
        disabled=""
        type="radio"
      />
      <span
        class="cuke-radio-inner"
      />
    </span>
    <span />
  </label>
</div>
`;

exports[`<Radio/> should render RadioGroup 1`] = `
<div>
  <div
    class="cuke-radio-group"
    value="小红"
  >
    <label
      checked=""
      class="cuke-radio-wrapper cuke-radio-checked"
    >
      <span
        class="cuke-radio"
      >
        <input
          checked=""
          class="cuke-radio-input"
          type="radio"
          value="小红"
        />
        <span
          class="cuke-radio-inner"
        />
      </span>
      <span>
        小红
      </span>
    </label>
    <label
      class="cuke-radio-wrapper"
    >
      <span
        class="cuke-radio"
      >
        <input
          class="cuke-radio-input"
          type="radio"
          value="小明"
        />
        <span
          class="cuke-radio-inner"
        />
      </span>
      <span>
        小明
      </span>
    </label>
    <label
      class="cuke-radio-wrapper"
    >
      <span
        class="cuke-radio"
      >
        <input
          class="cuke-radio-input"
          type="radio"
          value="小美"
        />
        <span
          class="cuke-radio-inner"
        />
      </span>
      <span>
        小美
      </span>
    </label>
    <label
      class="cuke-radio-wrapper"
    >
      <span
        class="cuke-radio"
      >
        <input
          class="cuke-radio-input"
          type="radio"
          value="小芳"
        />
        <span
          class="cuke-radio-inner"
        />
      </span>
      <span>
        小芳
      </span>
    </label>
    <label
      class="cuke-radio-wrapper cuke-radio-disabled"
    >
      <span
        class="cuke-radio"
      >
        <input
          class="cuke-radio-input"
          disabled=""
          type="radio"
          value="小黑"
        />
        <span
          class="cuke-radio-inner"
        />
      </span>
      <span>
        小黑
      </span>
    </label>
  </div>
</div>
`;

exports[`<Radio/> should render custom size 1`] = `
<div>
  <RadioGroup
    disabled={false}
    onChange={[Function]}
    prefixCls="cuke-radio-group"
    size="small"
    value="小红"
  >
    <Radio
      checked={false}
      defaultChecked={false}
      prefixCls="cuke-radio"
      size="default"
      value="小红"
    >
      小红
    </Radio>
    <Radio
      checked={false}
      defaultChecked={false}
      prefixCls="cuke-radio"
      size="default"
      value="小明"
    >
      小明
    </Radio>
    <Radio
      checked={false}
      defaultChecked={false}
      prefixCls="cuke-radio"
      size="default"
      value="小美"
    >
      小美
    </Radio>
  </RadioGroup>
  <RadioGroup
    disabled={false}
    onChange={[Function]}
    prefixCls="cuke-radio-group"
    size="default"
    value="小红"
  >
    <Radio
      checked={false}
      defaultChecked={false}
      prefixCls="cuke-radio"
      size="default"
      value="小红"
    >
      小红
    </Radio>
    <Radio
      checked={false}
      defaultChecked={false}
      prefixCls="cuke-radio"
      size="default"
      value="小明"
    >
      小明
    </Radio>
    <Radio
      checked={false}
      defaultChecked={false}
      prefixCls="cuke-radio"
      size="default"
      value="小美"
    >
      小美
    </Radio>
  </RadioGroup>
  <RadioGroup
    disabled={false}
    onChange={[Function]}
    prefixCls="cuke-radio-group"
    size="large"
    value="小红"
  >
    <Radio
      checked={false}
      defaultChecked={false}
      prefixCls="cuke-radio"
      size="default"
      value="小红"
    >
      小红
    </Radio>
    <Radio
      checked={false}
      defaultChecked={false}
      prefixCls="cuke-radio"
      size="default"
      value="小明"
    >
      小明
    </Radio>
    <Radio
      checked={false}
      defaultChecked={false}
      prefixCls="cuke-radio"
      size="default"
      value="小美"
    >
      小美
    </Radio>
  </RadioGroup>
</div>
`;
